# base64-dns-parser

./: AGENTS.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
base64_dns_parser/: __init__.py  __main__.py
tests/: test_decoding.py
