[tool.poetry]
name = "base64-dns-parser"
version = "0.0.1"
description = "Decode base64-encoded DNS responses"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
base64-dns-parser = "base64_dns_parser.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.0"
ruff = "^0.14.9"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "base64-dns-parser"
description = "Decode base64-encoded DNS responses"
license = "MIT"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
