
[project]
name = "base64-dns-parser"
description = "Decode base64-encoded DNS responses"
license = { text = "MIT" }
version = "0.0.1"
readme = "README.md"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
dependencies = [
    "pydantic>=2.13.4", # stop toml single-lining this]
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "pytest>=9.0.3",
    "ty>=0.0.35",
]

[project.scripts]
base64-dns-parser = "base64_dns_parser.__main__:main"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
